include babel, inconfont, incofontcss

--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "license": "MIT",
   "scripts": {
     "gulp": "gulp",
-    "start": "yarn gulp"
+    "build": "yarn gulp build"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
-    "gulp-iconfont": "^10.0.2"
+    "gulp-iconfont": "^10.0.2",
+    "gulp-iconfont-css": "^3.0.0"
   }
 }
