--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "license": "MIT",
   "scripts": {
     "gulp": "gulp",
-    "build": "yarn gulp build"
+    "build": "yarn gulp build",
+    "preview": "yarn gulp server"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/register": "^7.0.0",
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-iconfont": "^10.0.2",
-    "gulp-iconfont-css": "^3.0.0"
+    "gulp-iconfont-css": "^3.0.0",
+    "gulp-sass": "^4.0.2"
   }
 }
