--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "gulp": "gulp",
     "build": "yarn gulp build",
-    "preview": "yarn gulp server"
+    "preview": "yarn gulp preview"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -16,6 +16,7 @@
     "@babel/register": "^7.0.0",
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
+    "fs-extra": "^7.0.1",
     "gulp": "^4.0.0",
     "gulp-iconfont": "^10.0.2",
     "gulp-iconfont-css": "^3.0.0",
