--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^4.0.0",
     "gulp-iconfont": "^10.0.2",
     "gulp-iconfont-css": "^3.0.0",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2"
   }
 }
