--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "del": "^3.0.0",
     "fs-extra": "^7.0.1",
     "gulp": "^4.0.0",
+    "gulp-data": "^1.3.1",
     "gulp-iconfont": "^10.0.2",
     "gulp-iconfont-css": "^3.0.0",
     "gulp-pug": "^4.0.1",
